--- a/requirements.txt
+++ b/requirements.txt
@@ -16,8 +16,8 @@ itsdangerous==0.24
 Jinja2==2.10
 Mako==1.0.7
 MarkupSafe==1.0
-MySQL-python==1.2.3
 paginate==0.5.6
+PyMySQL==0.7.11
 python-dateutil==2.6.1
 python-editor==1.0.3
 six==1.11.0
